style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 480vh;
    background-color: rgb(46, 46, 46);
    scroll-behavior: smooth;
}

header{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 40px;
    transition: 0.6s ease-in-out;
    padding-bottom: 20px;
    z-index: 100000;
}

header .title{
    padding: 10px;
}

.title{
    padding-top: 40px;
}
header a{
    text-decoration: none;
    color: black;
    margin-right: 15px;
    font-size: 20px;
    transition: 0.6s ease-in-out;
}

.navs{
    transition: 0.6s ease-in-out;
}
header a:hover{
    letter-spacing: 1.2px;
}

header.sticky,
header.sticky a{
    background-color: black;
    color: white;
}  

header.sticky{
    font-size: 30px;
    height: 50px;
}

header.sticky a{
    font-size: 15px;
}


.banner{
    background-image: url(./pics/blacksand.jpeg);
    height: 100vh;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
}

/* About Page */

.about{
    height: 700px;
    display: flex;
    background-color: black;
}

.img-container{
    flex: 1;
    height: 700px;
}

.about .content{
    flex: 2;
}

.content .title{
    font-size: 150px;
    letter-spacing: 30px;
    color: white;
}

.content .passage{
    color: white;
    font-size: 28px;
    margin-right: 20px;
    margin-left: 20px;
    font-style: italic;
}

img{
    border-radius: 10px;
    margin: 20px;
    width: 500px;
    height: auto;
}

/* Restaurants page */


.restaurants .title{
    margin-left: 10px;
}

.restaurants{
    padding-bottom: 30px;
    padding-left: 30px;
    padding-right: 30px;
    background-color: rgb(24, 23, 23);
}
#two.img-container{
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 20px;
}

#two.img-container img{
    height: auto;
    width: 400px;
    transition: 0.07s ease;
}

#two.img-container img:hover{
    transform: scale(1.1);
}

.caption{
    font-size: 20px;
    color: white;
    padding-left: 40px;
    line-height: 30px;
    text-align: center;
}

/* Room Selections */

.rooms{
    padding-bottom: 50px;
}

#three.title{
    font-size: 110px;
    text-align: center;
    margin-bottom: 30px;
    margin-top: 30px;
}

.passage p{
    line-height: 40px;
}

.rooms .content-container{
    min-height: 600px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.card{
    margin-top: 50px;
    height: 700px;
    width: 400px;
    border-radius: 10px;
    background-color: rgb(226, 224, 224);
    text-align: center;
}

.card .room-title{
    font-size: 30px;
    font-weight: 800;
}

.card img{
    width: 350px;
    transition: 0.07s ease;
}

.card img:hover{
    transform: scale(1.05);
}

/* Reservation page */
.reservations{
    height: 100vh;
    width: 100vw;
    background-color: rgb(189, 189, 189);
    padding-top: 80px;
}

.reservations .container{
    position: relative;
    width: 100vw;
    min-height: 550px;
    z-index: 1000;
    display: flex;
    justify-content: center;
    align-items: center;
}

.reservations .container .contactinfo{
    position: absolute;
    background-color: black;
    width: 500px;
    height: 600px;
    top: 50px;
    left: 100px;
    z-index: 10;
    padding-bottom: 50px;
}

.reservations .container .contactForm{
    background-color: white;
    z-index: 1;
    width: 1500px;
    height: 800px;
    padding-left: 250px;
    padding-top: 50px;
}

.reservations .container .contactForm .formBox{
    display: flex;
    flex-wrap: wrap;
}

.reservations .container .contactForm .formBox .inputBox{
    margin-top: 40px;
    margin-left: 40px;
    padding: 10px;
} 

.inputBox.w50 input{
    width: 300px;
    height: 30px;
}

.inputBox.w100 input.text{
    width: 700px;
    height: 200px;
}

.inputBox.w100 input{
    display: flex;
    margin-bottom: 15px;
}

.inputBox.w100{
    margin-top: 30px;
    padding-left: 50px;
    line-height: 50px;
}

.inputBox.w100 h4{
    font-size: 1.15em;
    margin-top: 5px;
}

.inputBox.w100 .submit{
    height: 30px;
    width: 100px;
    padding-left: 35px;
}

.contact-block{
    padding: 40px;
}

.contact-block h2{
    font-size: 35px;
}


.info img,
.sci li img{
    width: 35px;
    height: 35px;
}

.info .text{
    color: white;
}

.sci li a{
    cursor: pointer;
}

.sci{
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
}








/* Footer */

footer{
    
}

